[workspace]
members = [
    "backend",
    "frontend",
    "common",
    "database/http_server",
    "database/cli"
]
default-members = ["backend"]

[workspace.dependencies]
static_routes = { path = "common/static_routes" }
interfacing = { path = "common/interfacing" }
database_common = { path = "common/database_common" }
domain = { path = "common/domain" }
telemetry = { path = "common/telemetry" }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.94"
anyhow = "1.0.71"
claim = { package = "claims", version = "0.7.1"}

[workspace.dependencies.bonsaidb]
rev = "69e9558f0b3379c4fc12c4f33b0e3205a4e897fa"
git = "https://github.com/phantie/bonsaidb"
features = ["server-full", "client-full", "local-full", "password-hashing", "instrument"]