[workspace]
members = [
    "backend",
    "frontend",
    "database/http_server",
    "database/cli"
]
default-members = ["backend"]

[workspace.dependencies]
common = { path = "common" }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
claim = { package = "claims", version = "0.7.1"}
serde_json = "1.0.94"
anyhow = "1.0.71"

[workspace.dependencies.bonsaidb]
rev = "c42b2f580ff6cef4854f0a2ae45e52a7743352d6" # 20.05.23
git = "https://github.com/khonsulabs/bonsaidb/"
features = ["server-full", "client-full", "local-full", "password-hashing"]