[package]
name = "api_aga_in"
version = "0.1.0"
edition = "2021"
default-run = "api_aga_in"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api_aga_in"


[dependencies]
axum = { version = "0.6.10", features = ["headers"] }
config = "0.13.3"
hyper = "0.14.24"
tokio = { version = "1.26.0", features = ["rt", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "request-id", "add-extension", "util"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
serde-aux = "4.1.2"
unicode-segmentation = "1.10.1"
validator = "0.16.0"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rand = { version = "0.8.5", features = ["std_rng"] }
axum-macros = "0.3.6"
thiserror = "1.0.39"
uuid = { version = "1.3.0", features = ["v4"] }
argon2 = { version = "0.5.0", features = ["std"] }
axum-sessions = "0.4.1"
clap = { version = "4.1.11", features = ["derive"] }
rpassword = "7.2.0"
mime_guess = "2.0.4"
include_dir = { version = "0.7.3", features = ["metadata"]  }
fabruic = "0.0.1-dev.6"
async-trait = "0.1.68"
hex = "0.4.3"
bytes = "1.4.0"
httpdate = "1.0.2"

database_common.workspace = true
static_routes.workspace = true
interfacing.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
bonsaidb.workspace = true
anyhow.workspace = true
domain.workspace = true

[features]

[dev-dependencies]
once_cell = "1.17.1"
rand_core = "0.6.4"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "2.5.0"
wiremock = "0.5.17"
linkify = "0.9.0"
tempdir = "0.3.7"

claim.workspace = true