[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
axum = { version = "0.6.10", features = ["headers", "ws"] }
config = "0.13.3"
hyper = "0.14.24"
tokio = { version = "1.26.0", features = ["rt", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "request-id", "add-extension", "util", "compression-gzip"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
serde-aux = "4.1.2"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls", "cookies"] }
axum-macros = "0.3.6"
thiserror = "1.0.39"
axum-sessions = "0.4.1"
clap = { version = "4.1.11", features = ["derive"] }
mime_guess = "2.0.4"
include_dir = { version = "0.7.3", features = ["metadata"]  }
fabruic = "0.0.1-dev.6"
async-trait = "0.1.68"
hex = "0.4.3"
bytes = "1.4.0"
httpdate = "1.0.2"

secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
bonsaidb.workspace = true
anyhow.workspace = true
common.workspace = true
rand.workspace = true
futures-util = "0.3.28"
async-broadcast = "0.5.1"

[dev-dependencies]
once_cell = "1.17.1"
wiremock = "0.5.17"
linkify = "0.9.0"
fake = "2.5.0"
uuid = { version = "1.3.0", features = ["v4"] }

tempdir.workspace = true
claim.workspace = true
