[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
interfacing = { path = "../common/interfacing" }
static_routes = { path = "../common/static_routes" }
domain = { path = "../common/domain" }
auth = { path = "../common/auth" }

config = { version = "0.13.3", default-features = false, features = ["yaml"] }
hyper = "0.14.24"
tokio = { version = "1.26.0", features = ["rt", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "request-id", "add-extension", "util", "compression-gzip"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["registry", "env-filter", "ansi"] }
serde-aux = "4.1.2"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls", "cookies"] }
thiserror = "1.0.39"
axum-sessions = "0.4.1"
clap = { version = "4.1.11", features = ["derive"] }
mime_guess = "2.0.4"
include_dir = { version = "0.7.3", features = ["metadata"]  }
fabruic = "0.0.1-dev.6"
async-trait = "0.1.68"
hex = "0.4.3"
bytes = "1.4.0"
httpdate = "1.0.2"
futures-util = "0.3.28"
async-broadcast = "0.5.1"
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
secrecy = { version = "0.8.0", features = ["serde"] }
anyhow = "1.0.71"
serde_json = "1.0.94"
axum-macros = "0.3.8"
axum = { version = "0.6.20", features = ["headers", "ws"] }
cozo = { version = "0.7.2", default-features = false, features = ["minimal", "rayon"] }
itertools = "0.11.0"
miette = "5.10.0"
map-macro = "0.2.6"
uuid = { version = "1.3.0", features = ["v4"] }
derivative = "2.2.0"

[dev-dependencies]
once_cell = "1.17.1"
