[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_routes = { path = "static_routes" }
interfacing = { path = "interfacing" }
database_common = { path = "database_common" }