[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_routes = { path = "static_routes" }
domain = { path = "domain" }
interfacing = { path = "interfacing" }
tempdir = { version = "0.3.7", optional = true }
bonsaidb = { workspace = true, optional = true }
serde.workspace = true
anyhow.workspace = true

[features]
default = ["db", "static_routes", "domain", "interfacing"]
db = ["dep:tempdir", "dep:bonsaidb"]
static_routes = []
domain = []
interfacing = []
