[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "db", optional = true }
static_routes = { path = "static_routes", optional = true }
domain = { path = "domain", optional = true }
interfacing = { path = "interfacing", optional = true }
auth = { path = "auth", optional = true }

[features]
default = ["db", "static_routes", "domain", "interfacing", "auth"]
db = ["dep:db"]
static_routes = ["dep:static_routes"]
domain = ["dep:domain"]
interfacing = ["dep:interfacing"]
auth = ["dep:auth"]
