[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
gloo-net = "0.2.6"
stylist = { version = "0.12.0", features = ["yew", "parser"] }
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
static_routes.workspace = true
interfacing.workspace = true
thiserror = "1.0.40"
anyhow = "1.0.70"
