[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interfacing = { path = "../common/interfacing" }
static_routes = { path = "../common/static_routes" }

gloo-console = "0.2.3"
gloo-net = { version = "0.2.6", features = ["websocket"] }
stylist = { version = "0.12.0", features = ["yew", "parser"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
thiserror = "1.0.40"
pulldown-cmark = "0.9.2"
gloo-storage = "0.2.2"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
serde_json = "1.0.94"
anyhow = "1.0.71"
futures = "0.3.28"
nom = "7.1.3"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.61"
features = ["HtmlCanvasElement", "CanvasRenderingContext2d"]
