[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }

schema = { path = "schema", optional = true }
init = { path = "init", optional = true }
def = { path = "def", optional = true }

[features]
default = ["def"]
schema = ["dep:schema"]
init = ["schema", "dep:init"]
def = ["dep:def"]