[package]
name = "interfacing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
secrecy = { version = "0.8.0", features = ["serde"] }
humantime = "2.1.0"
serde_json = "1.0.113"
