[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["cargo"] }
rpassword = "7.2.0"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
fork = "0.1.21"

secrecy.workspace = true
database_common.workspace = true
interfacing.workspace = true