[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10", features = ["headers"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
hyper = "0.14.24"
clap = "4.2.7"
tower-http = { version = "0.4.0", features = ["add-extension"] }
axum-macros = "0.3.6"
argon2 = { version = "0.5.0", features = ["std"] }
rand = { version = "0.8.5", features = ["std_rng"] }
tempdir = "0.3.7"

serde.workspace = true
secrecy.workspace = true
common.workspace = true
bonsaidb.workspace = true
anyhow.workspace = true
