[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interfacing = { path = "../../common/interfacing" }
db = { path = "../../common/db" }
auth = { path = "../../common/auth" }

axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
hyper = "0.14.24"
clap = "4.2.7"
tower-http = { version = "0.4.0", features = ["add-extension"] }
axum-macros = "0.3.6"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
anyhow = "1.0.71"
tempdir = "0.3.7"

[dependencies.bonsaidb]
rev = "c42b2f580ff6cef4854f0a2ae45e52a7743352d6" # 20.05.23
git = "https://github.com/khonsulabs/bonsaidb/"
features = ["client-full", "local-full", "password-hashing"]

